# elevation_ccl

./: .gitignore  CMakeLists.txt  package.xml  setup.txt
config/: param.yaml
include/elevation_ccl/: ccl_solver.h  elevation_ccl.h  iris_solver.h  solver.h
include/plane_segmentation/: ccl_solver.h  plane_segmentation.h
launch/: elevation_ccl.launch.py  plane_segmentation.launch.py
src/: ccl_solver.cpp  elevation_ccl.cpp  plane_segmentation.cpp  solver.cpp
test/: test_ccl_solver.cpp
